@@ -2214,13 +2214,17 @@ test chan-io-28.7 {Tcl_CloseEx (half-close) socket} -setup {
 	puts $sok DONE
 	exit 0
     } echo.tcl]
-} -body {
+    variable done
+    unset -nocomplain done
+    set done ""
+    set timer ""
     set ff [openpipe r $echo]
     gets $ff port
+} -body {
     set s [socket 127.0.0.1 $port]
     puts $s Hey
     close $s w
-    set timer [after 1000 [namespace code {set ::done Failed}]]
+    set timer [after 1000 [namespace code {set done Failed}]]
     set acc {}
     fileevent $s readable [namespace code {
 	if {[gets $s line]<0} {
@@ -2230,11 +2234,11 @@ test chan-io-28.7 {Tcl_CloseEx (half-close) socket} -setup {
 	}
     }]
     vwait [namespace which -variable done]
-    after cancel $timer
-    close $s r
-    close $ff
     list $done $acc
 } -cleanup {
+    catch {close $s}
+    close $ff
+    after cancel $timer
     removeFile echo.tcl
 } -result {Succeeded {Hey DONE}}
 
